- added support for markdown text formatting (colours, bullet styles, link as button) - added validation to dynamic content to prevent columns or rows being added when not possible - fixed column actions for nested rows - migrated expense claim and content text endpoints to typescript

--- a/projects/ngx-ramblers/src/app/assets/styles/colours.sass
+++ b/projects/ngx-ramblers/src/app/assets/styles/colours.sass
@@ -16,6 +16,7 @@ $ramblers-colour-sunrise: rgb(249, 177, 4)
 $ramblers-colour-sunset: rgb(240, 128, 80)
 
 $disabled-color: rgb(153, 153, 153)
+$grey-color: #eee
 $admin-color-hover: $ramblers-colour-mintcake-hover
 $admin-color: $ramblers-colour-mintcake
 $background-color: $ramblers-colour-mintcake
@@ -42,6 +43,44 @@ $confirm-hover: #eb0c35
 
 .colour-sunset
   color: $ramblers-colour-sunset
+
+.colour-grey
+  color: $grey-color
+
+.colour-disabled
+  color: $disabled-color
+
+.text-style-mintcake
+  background-color: $ramblers-colour-mintcake
+  color: #fff
+
+.text-style-rosycheeks
+  background-color: $ramblers-colour-rosycheeks
+  color: #fff
+
+
+.text-style-sunset
+  background-color: $ramblers-colour-sunset
+  color: #fff
+
+.text-style-grey
+  background-color: $grey-color
+
+.text-style-sunrise
+  background-color: $ramblers-colour-sunrise
+  color: #fff
+
+.text-style-cloudy
+  background-color: $ramblers-colour-cloudy
+  border-color: lightgrey
+  border-style: solid
+  border-width: 1px
+  color: $ramblers-colour-granite
+
+.text-style-granite
+  background-color: $ramblers-colour-granite
+  color: #fff
+
 
 .drop-shadow
   text-shadow: 2px 2px 4px $ramblers-colour-granite
