--- a/projects/ngx-ramblers/src/app/modules/common/dynamic-content/dynamic-content-site-edit-text-row.html
+++ b/projects/ngx-ramblers/src/app/modules/common/dynamic-content/dynamic-content-site-edit-text-row.html
@@ -5,7 +5,8 @@
         <!-- beginning of row content editing-->
         <div *ngIf="!column.rows" class="thumbnail-site-edit h-100">
           <div class="thumbnail-heading">Col {{columnIndex + 1}}</div>
-          <app-markdown-editor (saved)="actions.saveContentTextId($event, rowIndex, column, pageContent)"
+          <app-markdown-editor #markdownEditorComponent
+                               (saved)="actions.saveContentTextId($event, rowIndex, column, pageContent)"
                                (focusChange)="markdownEditorFocusChange($event)"
                                buttonsAvailableOnlyOnFocus queryOnlyById allowMaximise unlinkEnabled
                                [description]="actions.rowColumnIdentifierFor(rowIndex, columnIndex, contentDescription)"
@@ -32,7 +33,16 @@
                                 [icon]="column.imageSource? faPencil : faAdd"
                                 [caption]="(column?.imageSource ? 'edit' : 'add') + ' image'">
               </app-badge-button>
+              <app-badge-button *ngIf="column.imageSource" (click)="removeImage(column)"
+                                [icon]="faRemove"
+                                [caption]="'remove image'">
+              </app-badge-button>
+              <app-badge-button *ngIf="column.imageSource" (click)="replaceImage(column, rowIndex, columnIndex)"
+                                [icon]="faAdd"
+                                [caption]="'replace image'">
+              </app-badge-button>
               <app-actions-dropdown
+                [markdownEditorComponent]="markdownEditorComponent"
                 [columnIndex]="columnIndex"
                 [pageContent]="pageContent"
                 [column]="column"
@@ -80,44 +90,48 @@
           <div class="thumbnail-heading">Row {{rowIndex + 1}} column {{columnIndex + 1}}
             ({{stringUtils.pluraliseWithCount(column.rows?.length, 'nested row')}})
           </div>
-          <app-actions-dropdown [pageContent]="pageContent"
-                                [columnIndex]="columnIndex"
-                                [column]="column">
-          </app-actions-dropdown>
+          <div class="row align-items-end">
+            <div class="col-auto">
+              <app-actions-dropdown [pageContent]="pageContent"
+                                    [columnIndex]="columnIndex"
+                                    [row]="row"
+                                    [column]="column">
+              </app-actions-dropdown>
+            </div>
+            <div class="col">
+              <app-column-width [column]="column" (expandToggle)="expanded=$event"></app-column-width>
+            </div>
+          </div>
           <div class="thumbnail-site-edit mt-3"
-               *ngFor="let row of column.rows; let nestedRowIndex = index;">
+               *ngFor="let nestedRow of column.rows; let nestedRowIndex = index;">
             <div class="thumbnail-heading">Row {{rowIndex + 1}} (nested row {{nestedRowIndex + 1}}
               column {{columnIndex + 1}}
-              ({{stringUtils.pluraliseWithCount(row?.columns.length, 'column')}}))
+              ({{stringUtils.pluraliseWithCount(nestedRow?.columns.length, 'column')}}))
             </div>
             <div class="row align-items-end mb-3">
-              <div class="col">
+              <div [ngClass]="column.columns > 6 || expanded ? 'col': 'col-sm-12'">
                 <app-margin-select label="Margin Top"
-                                   [data]="row"
+                                   [data]="nestedRow"
                                    field="marginTop">
                 </app-margin-select>
               </div>
               <div class="col">
                 <app-margin-select label="Margin Bottom"
-                                   [data]="row"
+                                   [data]="nestedRow"
                                    field="marginBottom">
                 </app-margin-select>
               </div>
-              <div class="col">
-                <app-column-width [column]="column" (expandToggle)="expanded=$event"></app-column-width>
-              </div>
-              <div class="col">
+              <div class="col mt-3">
                 <app-actions-dropdown [rowIndex]="nestedRowIndex"
                                       [pageContent]="pageContent"
                                       [rowIsNested]="true"
                                       [column]="column"
-                                      [row]="row">
+                                      [row]="nestedRow">
                 </app-actions-dropdown>
               </div>
-
             </div>
             <app-dynamic-content-site-edit-text-row
-              [row]="row"
+              [row]="nestedRow"
               [parentRowIndex]="rowIndex"
               [rowIndex]="nestedRowIndex"
               [contentDescription]="contentDescription"
