--- a/projects/ngx-ramblers/src/app/pages/admin/expenses/modals/expense-return-modal.component.html
+++ b/projects/ngx-ramblers/src/app/pages/admin/expenses/modals/expense-return-modal.component.html
@@ -6,7 +6,7 @@
   <div class="modal-body">
     <h5>You are about to return the Expense Claim
       for {{display.expenseClaimCreatedEvent(expenseClaim).memberId | memberIdToFullName : members}}</h5>
-    <ul class="list-arrows">
+    <ul class="list-arrow">
       <li>Please enter a reason for the return below.</li>
       <li>An email will then be sent to them informing them of this reason.</li>
     </ul>
