--- a/projects/ngx-ramblers/src/app/pages/admin/expenses/modals/expense-submit-modal.component.html
+++ b/projects/ngx-ramblers/src/app/pages/admin/expenses/modals/expense-submit-modal.component.html
@@ -5,7 +5,7 @@
   </div>
   <div class="modal-body">
     <h5>You are about to {{resubmit ? 'resubmit' : 'submit'}} your expense claim</h5>
-    <ul class="list-arrows">
+    <ul class="list-arrow">
       <li>If you supply us with your bank account details below we will be able to pay your claim electronically
         which will speed up the claim processing time.
       </li>
