--- a/projects/ngx-ramblers/src/app/pages/admin/member-bulk-load/member-bulk-load.component.html
+++ b/projects/ngx-ramblers/src/app/pages/admin/member-bulk-load/member-bulk-load.component.html
@@ -14,7 +14,7 @@
                     </div>
                   </div>
                   <div class="col-sm-9">
-                    <ul class="list-arrows">
+                    <ul class="list-arrow">
                       <b>The following data format is supported</b>
                       <li>Since September 2020, Ramblers have switched to Using <a
                         href="https://insight.ramblers.org.uk">InsightHub</a> for providing member data to Membership
@@ -35,7 +35,7 @@
               <div class="admin-header-white-background rounded">
                 <div class="row">
                   <div class="col-md-12">
-                    <ul class="list-arrows ml-0">
+                    <ul class="list-arrow ml-0">
                       <b>To load the members, follow these steps:</b>
                       <li>Download the <a
                         href="https://insight.ramblers.org.uk/#/views/MembershipSecretariesV4-AZURE/FullList">Explore/Membership/Membership
