--- a/projects/ngx-ramblers/src/app/pages/how-to/subject-listing/subject-listing.html
+++ b/projects/ngx-ramblers/src/app/pages/how-to/subject-listing/subject-listing.html
@@ -45,7 +45,7 @@
                     ({{memberResourcesReferenceData.accessLevelFor(memberResource.accessLevel).description}})</small>
                 </h6>
               </div>
-              <p markdown [data]="memberResource.description"></p>
+              <p class="list-arrow" markdown [data]="memberResource.description"></p>
               <div *ngIf="isActive(memberResource)" class="row">
                 <div class="col-sm-12">
                   <div class="action-button-group">
