--- a/projects/ngx-ramblers/src/app/pages/social/edit/social-edit.component.html
+++ b/projects/ngx-ramblers/src/app/pages/social/edit/social-edit.component.html
@@ -74,7 +74,7 @@
                       edit</a>
                   </label>
                   <div>
-                    <p *ngIf="longerDescriptionPreview"
+                    <p class="list-arrow" *ngIf="longerDescriptionPreview"
                        (click)="editLongerDescription()"
                        markdown [data]="socialEvent.longerDescription"
                        id="longer-description-preview"></p>
