--- a/projects/ngx-ramblers/src/app/pages/social/social-view/social-view.html
+++ b/projects/ngx-ramblers/src/app/pages/social/social-view/social-view.html
@@ -20,7 +20,7 @@
     </div>
     <div class="row" *ngIf="display.allow.detailView">
       <div class="col-sm-12">
-        <p markdown [data]="socialEvent?.longerDescription"></p>
+        <p class="list-arrow" markdown [data]="socialEvent?.longerDescription"></p>
       </div>
     </div>
     <div class="row" *ngIf="display.allow.detailView">
