--- a/projects/ngx-ramblers/src/app/pages/walks/walk-add-slots/walk-add-slots.component.html
+++ b/projects/ngx-ramblers/src/app/pages/walks/walk-add-slots/walk-add-slots.component.html
@@ -29,7 +29,7 @@
         </div>
         <div class="main-body">
           <div *ngIf="selectionMade && bulk">
-            <ul class="list-arrows">
+            <ul class="list-arrow">
               <li>You can choose the date up until you want slots created using the calendar below.</li>
               <li>An email can optionally be sent to the group informing them of the new slots that can now be
                 filled.
@@ -46,7 +46,7 @@
             </div>
           </div>
           <div *ngIf="selectionMade && !bulk">
-            <ul class="list-arrows">
+            <ul class="list-arrow">
               <li>Use this option to create a slot on any day rather than just on a Sunday.</li>
             </ul>
             <div class="form-inline">
