--- a/projects/ngx-ramblers/src/app/pages/walks/walk-meetup-settings/walk-meetup-settings.component.html
+++ b/projects/ngx-ramblers/src/app/pages/walks/walk-meetup-settings/walk-meetup-settings.component.html
@@ -8,7 +8,7 @@
         <tab active="true" heading="Maintain description content">
           <div class="img-thumbnail thumbnail-admin-edit">
             <div class="mb-2">
-              <ul class="list-arrows">
+              <ul class="list-arrow">
                 <li>Here you can configure content text that will automatically be added to the beginning of
                   the walk description on Meetup events we create.
                 </li>
