--- a/projects/ngx-ramblers/src/app/pages/admin/expenses/modals/expense-paid-modal.component.html
+++ b/projects/ngx-ramblers/src/app/pages/admin/expenses/modals/expense-paid-modal.component.html
@@ -7,7 +7,7 @@
     <h5>You are about to mark the Expense Claim for <strong
       [textContent]="display.expenseClaimCreatedEvent(expenseClaim).memberId | memberIdToFullName : members"></strong>
       as <strong>Paid</strong></h5>
-    <ul class="list-arrows">
+    <ul class="list-arrow">
       <li>This should be done once the payment to their bank account has been organised.</li>
       <li>An email will now be sent to them informing them of this.</li>
     </ul>
