- Added support for configuration of website header - Added support for upload of svg images - Supported File Types are validated by resolving to a FileTypeAttributes object on entering image cropping. When Not croppable, image transformation and cropping options are disabled - Moved migration of system config into SystemConfigService and made toggleable in dev mode - Dropped unique index on member-audit model as it was causing some unique key violations on login

--- a/projects/ngx-ramblers/src/app/assets/styles/styles.sass
+++ b/projects/ngx-ramblers/src/app/assets/styles/styles.sass
@@ -12,6 +12,7 @@
 @import "./backgrounds"
 @import "./text"
 @import "./lists"
+@import "./new-lists"
 @import "./links"
 @import "./frames"
 @import "./radios"
