--- a/projects/ngx-ramblers/src/app/carousel/edit/aspect-ratio-selector/aspect-ratio-selector.html
+++ b/projects/ngx-ramblers/src/app/carousel/edit/aspect-ratio-selector/aspect-ratio-selector.html
@@ -1,6 +1,7 @@
 <label [for]="id">{{label || 'Aspect Ratio'}}</label>
 <select class="form-control input-sm"
         [(ngModel)]="dimension"
+        [disabled]="disabled"
         (ngModelChange)="changeAspectRatioSettings($event)"
         [id]="id">
   <option *ngFor="let aspectRatio of dimensions"
