--- a/projects/ngx-ramblers/src/app/container/container.html
+++ b/projects/ngx-ramblers/src/app/container/container.html
@@ -1,8 +1,8 @@
 <div class="container-fluid">
-  <app-header-bar></app-header-bar>
-  <app-navbar></app-navbar>
+  <app-header-bar *ngIf="config?.header?.headerBar?.show"/>
+  <app-navbar/>
 </div>
 <div class="container">
-  <router-outlet></router-outlet>
+  <router-outlet/>
 </div>
-<app-footer></app-footer>
+<app-footer/>
