--- a/projects/ngx-ramblers/src/app/container/container.sass
+++ b/projects/ngx-ramblers/src/app/container/container.sass
@@ -1,1 +1,17 @@
 @import "../assets/styles/colours"
+
+.surround
+  font-size: 1rem
+  color: #404141
+  font-family: "Assistant:", "Arial", sans-serif
+  font-weight: 400
+  line-height: 1.5
+  box-sizing: inherit
+  min-height: 100vh
+  position: relative
+  overflow: hidden
+  background: #f6f7f7
+  right: 0
+
+.normal
+  background: white
