--- a/projects/ngx-ramblers/src/app/modules/common/navbar-content/navbar-content.html
+++ b/projects/ngx-ramblers/src/app/modules/common/navbar-content/navbar-content.html
@@ -1,14 +1,14 @@
-<div class="container px-0">
-  <div class="row mx-auto mr-lg-0 ml-lg-auto">
+<div class="container px-0 {{systemConfig?.header?.navBar?.class}}">
+  <div class="row mx-auto mr-lg-0 ml-lg-auto ramblers-list-{{systemConfig?.header?.navBar?.class}}">
     <div class="px-0 col navigation">
       <ul class="mx-auto text-center ml-lg-auto mr-lg-0">
-        <app-page-navigator></app-page-navigator>
+        <app-page-navigator/>
       </ul>
     </div>
   </div>
   <div class="row mx-auto py-2 w-100 align-items-center justify-content-between bg-dark d-flex d-lg-none">
     <div class="d-block d-sm-flex align-items-center justify-content-center justify-content-lg-end order-sm-3 col-12 order-3">
-      <app-header-buttons></app-header-buttons>
+      <app-header-buttons  *ngIf="systemConfig?.header?.headerBar?.showNavigationButtons"/>
     </div>
   </div>
 </div>
