--- a/projects/ngx-ramblers/src/app/modules/common/navbar/navbar.html
+++ b/projects/ngx-ramblers/src/app/modules/common/navbar/navbar.html
@@ -1,30 +1,47 @@
-<div class="row">
-<div class="px-0 col">
-  <div class="container">
-    <div class="row">
-      <div class="p-0 px-lg-3 col">
-        <nav class="navbar navbar-expand-lg bg-light justify-content-between">
-          <a class="navbar-brand" [href]="urlService.baseUrl()" aria-current="page" target="_self">
-            <img *ngIf="logo?.awsFileName" [src]="urlService.resourceRelativePathForAWSFileName(logo?.awsFileName)"
-                 [alt]="systemConfig?.group?.shortName" [width]="logo?.width"></a>
-          <button type="button" aria-label="Toggle navigation"
-                  class="navbar-toggler border-0 rounded-0 collapsed"
-                  data-toggle="collapse" data-target="#nav-collapse" aria-controls="nav-collapse"
-                  aria-expanded="false">
-            <app-svg [height]="27"
-                     [width]="27"
-                     [icon]="icon()"
-                     (click)="toggleNavBar()">
-            </app-svg>
-          </button>
-          <div *ngIf="navbarContentWithinCollapse && this.navbarExpanded" class="collapse navbar-collapse"
-               id="nav-collapse">
-            <app-navbar-content></app-navbar-content>
+<div class="row d-flex align-items-stretch">
+  <div class="px-0 col">
+    <div class="container">
+      <div class="row d-flex align-items-stretch">
+        <div class="p-0 ml-lg-3 col {{systemConfig?.header?.navBar?.class}}">
+          <nav class="navbar navbar-expand-lg justify-content-between">
+            <a class="navbar-brand" [href]="urlService.baseUrl()" aria-current="page" target="_self">
+              <img *ngIf="logo?.awsFileName" [src]="urlService.resourceRelativePathForAWSFileName(logo?.awsFileName)"
+                   [alt]="systemConfig?.group?.shortName" [width]="logo?.width"></a>
+            <button type="button" aria-label="Toggle navigation"
+                    class="navbar-toggler border-0 rounded-0 collapsed"
+                    data-toggle="collapse" data-target="#nav-collapse" aria-controls="nav-collapse"
+                    aria-expanded="false">
+              <app-svg [height]="27"
+                       [width]="27"
+                       [colour]="systemConfig?.header?.navBar?.class==classBackgroundDark?colourCloudy:colourGranite"
+                       [icon]="icon()"
+                       (click)="toggleNavBar()">
+              </app-svg>
+            </button>
+            <div *ngIf="navbarContentWithinCollapse && this.navbarExpanded" class="collapse navbar-collapse"
+                 id="nav-collapse">
+              <app-navbar-content/>
+            </div>
+            <app-navbar-content
+              *ngIf="!navbarContentWithinCollapse && systemConfig?.header?.navBar?.location === NavBarLocation.LOGO_RIGHT"></app-navbar-content>
+          </nav>
+        </div>
+        <div *ngIf="!navbarContentWithinCollapse && systemConfig?.header?.rightPanel?.show"
+             class="p-0 mr-lg-3 col-auto {{systemConfig?.header?.navBar?.class}} pt-3 pr-2">
+          <app-header-buttons *ngIf="systemConfig?.header?.rightPanel?.showNavigationButtons"/>
+          <app-login-panel *ngIf="systemConfig?.header?.rightPanel?.showLoginLinksAndSiteEdit"/>
+          <div class="float-right mr-2"
+               [ngStyle]="{'width.px': systemConfig?.header?.rightPanel?.socialMediaLinks?.width}"
+               *ngIf="systemConfig?.header?.rightPanel?.socialMediaLinks?.show">
+            <app-social-media-links [colour]="systemConfig?.header?.rightPanel?.socialMediaLinks?.colour"></app-social-media-links>
           </div>
-          <app-navbar-content *ngIf="!navbarContentWithinCollapse"></app-navbar-content>
-        </nav>
+        </div>
+      </div>
+      <div *ngIf="systemConfig?.header?.navBar?.location === NavBarLocation.BELOW_LOGO" class="row">
+        <div class="p-0 px-lg-3 col">
+          <app-navbar-content *ngIf="!navbarContentWithinCollapse"/>
+        </div>
       </div>
     </div>
   </div>
-</div>
 </div>
