- Fixed add new function on image-collection-settings - Choose file dialog was not being displayed - Subsequent adds within same session were not working correctly

--- a/projects/ngx-ramblers/src/app/modules/common/dynamic-content/dynamic-content-view.html
+++ b/projects/ngx-ramblers/src/app/modules/common/dynamic-content/dynamic-content-view.html
@@ -14,9 +14,7 @@
     <app-dynamic-content-view-carousel *ngIf="actions.isCarousel(row)"
                                        [row]="row"
                                        [index]="actions.carouselOrAlbumIndex(row, viewablePageContent)"/>
-    <app-dynamic-content-view-album-index *ngIf="actions.isAlbumIndex(row)"
-                                       [row]="row"
-                                       [index]="actions.carouselOrAlbumIndex(row, viewablePageContent)"/>
+    <app-dynamic-content-view-album-index *ngIf="actions.isAlbumIndex(row)" [row]="row"/>
     <app-dynamic-content-view-album *ngIf="actions.isAlbum(row)"
                                     [row]="row"
                                     [index]="actions.carouselOrAlbumIndex(row, viewablePageContent)"/>
