--- a/projects/ngx-ramblers/src/app/pages/admin/system-settings/image/system-image-edit.html
+++ b/projects/ngx-ramblers/src/app/pages/admin/system-settings/image/system-image-edit.html
@@ -46,7 +46,7 @@
                           [icon]="faSave" caption="Make this logo the website default"/>
         <app-badge-button (click)="toggleImageEditor()"
                           [tooltip]="fileTypeAttributes?.croppable?'Edit '+image.originalFileName:image.originalFileName + ' is not editable'"
-                          [icon]="faEdit" caption="Edit image" [disabled]="!fileTypeAttributes.croppable"/>
+                          [icon]="faEdit" caption="Edit image" [disabled]="!fileTypeAttributes?.croppable"/>
         <app-badge-button (click)="delete()"
                           [tooltip]="'Delete ' + image.originalFileName + ' from collection of ' + rootFolder"
                           [icon]="faRemove" caption="Delete image" [disabled]="!fileTypeAttributes?.croppable"/>
